--- a/ode.tex
+++ b/ode.tex
@@ -6,7 +6,8 @@
 
 \newcommand{\C}[1]{\left[#1\right]}
 \newcommand{\COMB}[2]{\left(\begin{array}{c}#1\\#2\end{array}\right)}
-\newcommand{\D}[3]{\frac{d^{#3}#1}{d^{#3}#2}}
+\newcommand{\D}[3]{\DD{^{#3}#1}{#2^{#3}}}
+\newcommand{\DD}[2]{\frac{d#1}{d#2}}
 \newcommand{\EQ}[2]{\begin{equation}#1\label{#2}\end{equation}}
 \newcommand{\PA}[1]{\left(#1\right)}
 \newcommand{\PARTIAL}[2]{\frac{\partial #1}{\partial #2}}
@@ -20,7 +21,7 @@
 \section{Introduction}
 
 We are interested in solving ordinary differential equations (ODE) as:
-\EQ{\D{u}{t}{}=f\PA{t,\,u(t)}.}{EqODE}
+\EQ{\DD{u}{t}=f\PA{t,\,u(t)}.}{EqODE}
 
 The following notation has been used in this work:
 \[f_{n\,t}=\PARTIAL{^nf}{t^n},\]
@@ -38,15 +39,20 @@ The following notation has been used in this work:
 \]
 
 The following recurrence rule is hold:
-\EQ{\D{F_{i,j}}{t}{}=F_{i+1,j}+(i-j)\,F_{i,j+1}\,F_{1,0}.}{EqdF}
+\EQ{\DD{F_{i,j}}{t}=F_{i+1,j}+(i-j)\,F_{i,j+1}\,F_{1,0}.}{EqdF}
 
 Then,
-\[\left.\D{u}{t}{}\right|_0=F_{0,0},\]
+\[\left.\DD{u}{t}\right|_0=F_{0,0},\]
 \[\left.\D{u}{t}{2}\right|_0=F_{1,0},\]
 \[\left.\D{u}{t}{3}\right|_0=F_{2,0}+F_{1,1}\,F_{1,0},\]
 \[
 	\left.\D{u}{t}{4}\right|_0=F_{3,0}+3\,F_{2,1}\,F_{1,0}+F_{2,0}\,F_{1,1}
 	+F_{1,1}^2\,F_{1,0},
+\]
+\[
+	\left.\D{u}{t}{5}\right|_0=F_{4,0}+6\,F_{3,1}\,F_{1,0}+F_{3,0}\,F_{1,1}
+	+3\,F_{2,2}\,F_{1,0}^2+4\,F_{2,1}\,F_{2,0}+7\,F_{2,1}\,F_{1,1}\,F_{1,0}
+	+F_{2,0}\,F_{1,1}^2+F_{1,1}^3\,F_{1,0},
 \]
 
 \end{document}
