--- a/ode.tex
+++ b/ode.tex
@@ -24,16 +24,17 @@ We are interested in solving ordinary differential equations (ODE) as:
 \EQ{\DD{u}{t}=f\PA{t,\,u(t)}.}{EqODE}
 
 The following notation has been used in this work:
-\[u_0=u\PA{t_0},\]
-\[f_0=f\PA{t_0,\,u\PA{t_0}},\]
-\[f_{n\,t}=\PARTIAL{^nf}{t^n},\]
-\[f_{n\,t,m\,u}=\PARTIAL{^{n+m}f}{t^n\,\partial u^m},\]
-\[F_{0,0}=f_0,\]
-\[F_{1,0}=\PA{f_t+f\,f_u}_0,\]
-\[F_{1,1}=\PA{f_u}_0,\]
-\[F_{2,0}=\PA{f_{2t}+2\,f\,f_{t,u}+f^2\,f_{2u}}_0,\]
-\[F_{2,1}=\PA{f_{t,u}+f\,f_{2u}}_0,\]
-\[F_{2,2}=\PA{f_{2u}}_0,\]
+\[u_0=u\PA{t_0},\quad f_0=f\PA{t_0,\,u\PA{t_0}},\]
+\[
+	f_{n\,t}=\PARTIAL{^nf}{t^n},\quad
+	f_{n\,t,m\,u}=\PARTIAL{^{n+m}f}{t^n\,\partial u^m},
+\]
+\[F_{0,0}=f_0,\quad F_{1,0}=\PA{f_t+f\,f_u}_0,\quad F_{1,1}=\PA{f_u}_0,\]
+\[
+	F_{2,0}=\PA{f_{2t}+2\,f\,f_{t,u}+f^2\,f_{2u}}_0,\quad
+	F_{2,1}=\PA{f_{t,u}+f\,f_{2u}}_0,\quad
+	F_{2,2}=\PA{f_{2u}}_0,
+\]
 \[\cdots\]
 \[
 	F_{i,j}=\C{\sum_{k=0}^{i-j}\COMB{i-j}{k}\,f^k\,f_{(i-j-k)\,t,(j+k)\,u}}_0,
@@ -54,15 +55,111 @@ Then,
 \[
 	\left.\D{u}{t}{5}\right|_0=F_{4,0}+6\,F_{3,1}\,F_{1,0}+F_{3,0}\,F_{1,1}
 	+3\,F_{2,2}\,F_{1,0}^2+4\,F_{2,1}\,F_{2,0}+7\,F_{2,1}\,F_{1,1}\,F_{1,0}
+\]
+\[
 	+F_{2,0}\,F_{1,1}^2+F_{1,1}^3\,F_{1,0},
 \]
+
+Numerical methods to solve ODE (\ref{EqODE}) are based in approximate the 
+Taylor's serie. For instance, in 5-th order:
+\[
+	u\PA{t_0+h}=u_0+h\,\left.\DD{u}{t}\right|_0
+	+\frac{h^2}{2}\,\left.\D{u}{t}{2}\right|_0
+	+\frac{h^3}{6}\,\left.\D{u}{t}{3}\right|_0
+	+\frac{h^4}{24}\,\left.\D{u}{t}{4}\right|_0
+	+\frac{h^5}{120}\,\left.\D{u}{t}{5}\right|_0
+\]
+\[+O\PA{h^6}\]
+\[
+	=u_0+h\,F_{0,0}+\frac{h^2}{2}\,F_{1,0}
+	+\frac{h^3}{6}\,\PA{F_{2,0}+F_{1,1}\,F_{1,0}}
+\]
+\[
+	+\frac{h^4}{24}\,\PA{F_{3,0}+3\,F_{2,1}\,F_{1,0}+F_{2,0}\,F_{1,1}
+	+F_{1,1}^2\,F_{1,0}}
+\]
+\[
+	+\frac{h^5}{120}\,\left(F_{4,0}+6\,F_{3,1}\,F_{1,0}+F_{3,0}\,F_{1,1}
+	+3\,F_{2,2}\,F_{1,0}^2+4\,F_{2,1}\,F_{2,0}+7\,F_{2,1}\,F_{1,1}\,F_{1,0}
+	\right.
+\]
+\EQ{\left.+F_{2,0}\,F_{1,1}^2+F_{1,1}^3\,F_{1,0}\right)+O\PA{h^6}.}{EqTaylor}
 
 \section{Runge-Kutta methods}
 
 Runge-Kutta methods are methods in the form:
-\[d_i=\sum_{j=0}^{i-1}b_{i,j},\]
-\[f_i=f\PA{t+d_i\,\Delta t,u_i}\]
-\[u_i=u_0+\Delta t\,\sum_{j=0}^{i-1}b_{i,j}\,f_j,\]
+\EQ
+{
+	u_i=u_0+h\,\sum_{j=0}^{i-1}b_{i,j}\,f_j,\quad
+	f_i=f\PA{t+d_i\,h,u_i},\quad
+	d_i=\sum_{j=0}^{i-1}b_{i,j}.
+}{EqRK}
+
+Developing the steps in Taylor's series to 5-th order:
+\[u_1=u_0+h\,d_1\,F_{0,0},\]
+\[
+	f_1=F_{0,0}+h\,d_1\,F_{1,0}+\frac{h^2\,d_1^2}{2}\,F_{2,0}
+	+\frac{h^3\,d_1^3}{6}\,F_{3,0}+\frac{h^4\,d_1^4}{24}\,F_{4,0}+O\PA{h^5},
+\]
+\[
+	u_2=u_0+h\,d_2\,F_{0,0}+h^2\,b_{2,1}\,d_1\,F_{1,0}
+	+\frac{h^3\,b_{2,1}\,d_1^2}{2}\,F_{2,0}
+	+\frac{h^4\,b_{2,1}\,d_1^3}{6}\,F_{3,0}
+	+\frac{h^5\,b_{2,1}\,d_1^4}{24}\,F_{4,0}
+\]
+\[
+	+O\PA{h^6},
+\]
+\[
+	f_2=F_{0,0}+h\,d_2\,F_{1,0}+\frac{h^2\,d_2^2}{2}\,F_{2,0}
+	+h^2\,b_{2,1}\,d_{1}\,F_{1,1}\,F_{1,0}+\frac{h^3\,d_2^3}{6}\,F_{3,0}
+\]
+\[
+	+\frac{h^3\,b_{2,1}\,d_1^2}{2}\,F_{2,0}\,F_{1,1}
+	+\frac{h^4\,d_2^4}{24}\,F_{4,0}
+	+\frac{h^4\,d_2^2\,b_{2,1}\,d_1}{2}\,F_{3,1}\,F_{1,0}
+\]
+\[
+	+\frac{h^4\,b_{2,1}\,d_1^3}{6}\,F_{3,0}\,F_{1,1}
+	+\frac{h^4\,\PA{b_{2,1}\,d_1}^2}{2}\,F_{2,2}\,F_{1,1}^2
+	+\frac{h^4\,d_2\,b_{2,1}\,d_1^2}{2}\,F_{2,1}\,F_{2,0}
+	+O\PA{h^5},
+\]
+\[
+	u_3=u_0+h\,d_3\,F_{0,0}+h^2\,\PA{b_{3,1}\,d_1+b_{3,2}\,d_2}\,F_{1,0}
+	+\frac{h^3\,\PA{b_{3,1}\,d_1^2+b_{3,2}\,d_2^2}}{2}\,F_{2,0}
+\]
+\[
+	+h^3\,b_{3,2}\,b_{2,1}\,d_{1}\,F_{1,1}\,F_{1,0}
+	+\frac{h^4\,\PA{b_{3,1}\,d_1^2+b_{3,2}\,d_2^3}}{6}\,F_{3,0}
+	+\frac{h^4\,b_{3,2}\,b_{2,1}\,d_1^2}{2}\,F_{2,0}\,F_{1,1}
+\]
+\[
+	+\frac{h^5\,\PA{b_{3,1}\,d_1^4+b_{3,2}\,d_2^4}}{24}\,F_{4,0}
+	+\frac{h^5\,b_{3,2}\,d_2^2\,b_{2,1}\,d_1}{2}\,F_{3,1}\,F_{1,0}
+	+\frac{h^5\,b_{3,2}\,b_{2,1}\,d_1^3}{2}\,F_{3,0}\,F_{1,1}
+\]
+\[
+	+\frac{h^5\,b_{3,2}\,\PA{b_{2,1}\,d_1}^2}{2}\,F_{2,2}\,F_{1,0}^2
+	+\frac{h^5\,b_{3,2}\,d_2\,b_{2,1}\,d_1^2}{2}\,F_{2,1}\,F_{2,0}
+	+O\PA{h^6}
+\]
+
+Using the Einstein's notation, where repeated indeces are summed, and comparing
+with the Taylor's series (\ref{EqTaylor}) a $i$-steps Runge-Kutta method has to
+hold the following conditions to get different approximation orders:
+\begin{itemize}
+\item Fist order:
+	\EQ{d_i=1.}{EqRKI}
+\item Second order:
+	\EQ{b_{i,j}\,d_j=\frac12.}{EqRKII}
+\item Third order:
+	\[b_{i,j}\,d_j^2=\frac13,\]
+	\EQ{b_{i,j}\,b_{j,k}\,d_k=\frac16.}{EqRKIII}
+\item Fourth order:
+	\[b_{i,j}\,d_j^3=\frac14,\]
+	\EQ{b_{i,j}\,b_{j,k}\,d_k^2=\frac1{12}.}{EqRKIV}
+\end{itemize}
 
 \subsection{Runge-Kutta pairs}
 
