--- a/ode.tex
+++ b/ode.tex
@@ -1,9 +1,10 @@
 \documentclass[a4paper]{article}
 
-\title{Numerical methods to solve ordinary differential equations}
+\title{Efficient numerical methods to solve ballistic equations}
 \author{Javier Burguete}
 \date{\today}
 
+\newcommand{\ABS}[1]{\left|#1\right|}
 \newcommand{\C}[1]{\left[#1\right]}
 \newcommand{\COMB}[2]{\left(\begin{array}{c}#1\\#2\end{array}\right)}
 \newcommand{\D}[3]{\DD{^{#3}#1}{#2^{#3}}}
@@ -60,7 +61,14 @@ Then,
 	+F_{2,0}\,F_{1,1}^2+F_{1,1}^3\,F_{1,0},
 \]
 
-Numerical methods to solve ODE (\ref{EqODE}) are based in approximate the 
+When $f=f(t)$ is a function depending only in time, the above relatons are
+considerably simplified:
+\[
+	\left.\D{u}{t}{n}\right|_0=F_{n,0};\quad
+	F_{i,j}=0,\;\forall j>0.
+\]
+
+Numerical methods to solve ODE (\ref{EqODE}) are based in approximations of the 
 Taylor's serie. For instance, in 5-th order:
 \[
 	u\PA{t_0+h}=u_0+h\,\left.\DD{u}{t}\right|_0
@@ -85,15 +93,55 @@ Taylor's serie. For instance, in 5-th order:
 \]
 \EQ{\left.+F_{2,0}\,F_{1,1}^2+F_{1,1}^3\,F_{1,0}\right)+O\PA{h^6}.}{EqTaylor}
 
+\subsection{Decay ODE}
+
+A common particular case of ODE are the ''decay equations'' defined as:
+\EQ{\DD{u}{t}=-|g(u)|\,u,\quad g_u\geq0.}{EqDODE}
+with $g$ an increasing function on $u$. In these equations the variable module
+decreases always in time:
+\[\frac{du}{u}=-|g|\,dt\Rightarrow\]
+\[u(t)=u_0\,\exp\PA{-\int_0^t|g|\,dt}\Rightarrow\]
+\EQ{|u(t)|=\ABS{u_0}\,\exp\PA{-\int_0^t|g|\,dt.}}{EqDecay}
+As $|g|$ is positive the integral is an increasing function. Then, $|u|$ is a
+decreasing function. Another interesting property of these equations is that $u$
+cannot change the sign:
+\EQ{\frac{u(t)}{u_0}=\exp\PA{-\int_0^t|g|\,dt}\geq 0.}{EqDODEP}
+Solving DODE (\ref{EqDODE}) numerically in first order using the Euler's rule:
+\[u\PA{t_0+h}=u\PA{t_0}-h\,\ABS{g\PA{u\PA{t_0}}}\,u\PA{t_0}\Rightarrow\]
+\EQ{\frac{u\PA{t_0+h}}{u\PA{t_0}}=1-h\,\ABS{g\PA{u\PA{t_0}}}.}{EqDODEI}
+Then, to prevent numerical variable sign changes the time step size has to be
+limited by:
+\EQ
+{
+	\frac{u\PA{t_0+h}}{u\PA{t_0}}\geq0\Rightarrow\;
+	1-h\,\ABS{g\PA{u\PA{t_0}}}\geq0\Rightarrow\;
+	h\leq\frac{1}{|g|}.
+}{EqDODELimit}
+In these equations, we use the time step size as:
+\EQ{h=\frac{k_t}{|g|},}{EqDODE dt}
+with $k_t\leq1$ the dimensionless stability factor. 
+
+\subsection{Ballistic ODE}
+
+Ballistic equations are a particular form of ODE follow a form:
+\EQ{\ddot{\vec{r}}(t)=\ddot{\vec{r}}\PA{\dot{\vec{r}}(t)},}{EqBODE}
+where $\vec{r}$, $\dot{\vec{r}}$, $\ddot{\vec{r}}$ are the vectors of position,
+velocity and acceleration respectively.
+
 \section{Runge-Kutta methods}
 
+We use a variation of the Einstein's notation, where repeated indeces are
+summed, in order to simplify the notation:
+\EQ{f_{i,j}\,g_j\equiv\sum_{j=0}^{i-1}f_{i,j}\,g_j.}{EqNotation}
 Runge-Kutta methods are methods in the form:
 \EQ
 {
-	u_i=u_0+h\,\sum_{j=0}^{i-1}b_{i,j}\,f_j,\quad
+	u_i=u_0+h\,b_{i,j}\,f_j,\quad
 	f_i=f\PA{t+d_i\,h,u_i},\quad
+	d_0=0,\quad
 	d_i=\sum_{j=0}^{i-1}b_{i,j}.
 }{EqRK}
+Every $i$-th step introduces $i$ new freedom degrees.
 
 Developing the steps in Taylor's series to 5-th order:
 \[u_1=u_0+h\,d_1\,F_{0,0},\]
@@ -102,46 +150,89 @@ Developing the steps in Taylor's series to 5-th order:
 	+\frac{h^3\,d_1^3}{6}\,F_{3,0}+\frac{h^4\,d_1^4}{24}\,F_{4,0}+O\PA{h^5},
 \]
 \[
-	u_2=u_0+h\,d_2\,F_{0,0}+h^2\,b_{2,1}\,d_1\,F_{1,0}
-	+\frac{h^3\,b_{2,1}\,d_1^2}{2}\,F_{2,0}
-	+\frac{h^4\,b_{2,1}\,d_1^3}{6}\,F_{3,0}
-	+\frac{h^5\,b_{2,1}\,d_1^4}{24}\,F_{4,0}
+	u_2=u_0+h\,d_2\,F_{0,0}+h^2\,b_{2,j}\,d_j\,F_{1,0}
+	+\frac{h^3\,b_{2,j}\,d_j^2}{2}\,F_{2,0}
+	+\frac{h^4\,b_{2,j}\,d_j^3}{6}\,F_{3,0}
 \]
-\[
-	+O\PA{h^6},
-\]
+\[	+\frac{h^5\,b_{2,j}\,d_j^4}{24}\,F_{4,0}+O\PA{h^6},\]
 \[
 	f_2=F_{0,0}+h\,d_2\,F_{1,0}+\frac{h^2\,d_2^2}{2}\,F_{2,0}
-	+h^2\,b_{2,1}\,d_{1}\,F_{1,1}\,F_{1,0}+\frac{h^3\,d_2^3}{6}\,F_{3,0}
+	+h^2\,b_{2,j}\,d_j\,F_{1,1}\,F_{1,0}+\frac{h^3\,d_2^3}{6}\,F_{3,0}
 \]
 \[
-	+\frac{h^3\,b_{2,1}\,d_1^2}{2}\,F_{2,0}\,F_{1,1}
+	+\frac{h^3\,b_{2,j}\,d_j^2}{2}\,F_{2,0}\,F_{1,1}
 	+\frac{h^4\,d_2^4}{24}\,F_{4,0}
-	+\frac{h^4\,d_2^2\,b_{2,1}\,d_1}{2}\,F_{3,1}\,F_{1,0}
+	+\frac{h^4\,d_2^2\,b_{2,j}\,d_j}{2}\,F_{3,1}\,F_{1,0}
 \]
 \[
-	+\frac{h^4\,b_{2,1}\,d_1^3}{6}\,F_{3,0}\,F_{1,1}
-	+\frac{h^4\,\PA{b_{2,1}\,d_1}^2}{2}\,F_{2,2}\,F_{1,1}^2
-	+\frac{h^4\,d_2\,b_{2,1}\,d_1^2}{2}\,F_{2,1}\,F_{2,0}
+	+\frac{h^4\,b_{2,j}\,d_j^3}{6}\,F_{3,0}\,F_{1,1}
+	+\frac{h^4\,\PA{b_{2,j}\,d_j}^2}{2}\,F_{2,2}\,F_{1,0}^2
+	+\frac{h^4\,d_2\,b_{2,j}\,d_j^2}{2}\,F_{2,1}\,F_{2,0}
 	+O\PA{h^5},
 \]
 \[
-	u_3=u_0+h\,d_3\,F_{0,0}+h^2\,\PA{b_{3,1}\,d_1+b_{3,2}\,d_2}\,F_{1,0}
-	+\frac{h^3\,\PA{b_{3,1}\,d_1^2+b_{3,2}\,d_2^2}}{2}\,F_{2,0}
+	u_3=u_0+h\,d_3\,F_{0,0}+h^2\,b_{3,j}\,d_j\,F_{1,0}
+	+\frac{h^3\,b_{3,j}\,d_j^2}{2}\,F_{2,0}
+	+h^3\,b_{3,j}\,b_{j,k}\,d_k\,F_{1,1}\,F_{1,0}
 \]
 \[
-	+h^3\,b_{3,2}\,b_{2,1}\,d_{1}\,F_{1,1}\,F_{1,0}
-	+\frac{h^4\,\PA{b_{3,1}\,d_1^2+b_{3,2}\,d_2^3}}{6}\,F_{3,0}
-	+\frac{h^4\,b_{3,2}\,b_{2,1}\,d_1^2}{2}\,F_{2,0}\,F_{1,1}
+	+\frac{h^4\,b_{3,j}\,d_j^3}{6}\,F_{3,0}
+	+\frac{h^4\,b_{3,j}\,b_{j,k}\,d_k^2}{2}\,F_{2,0}\,F_{1,1}
+	+\frac{h^5\,b_{3,j}\,d_j^4}{24}\,F_{4,0}
 \]
 \[
-	+\frac{h^5\,\PA{b_{3,1}\,d_1^4+b_{3,2}\,d_2^4}}{24}\,F_{4,0}
-	+\frac{h^5\,b_{3,2}\,d_2^2\,b_{2,1}\,d_1}{2}\,F_{3,1}\,F_{1,0}
-	+\frac{h^5\,b_{3,2}\,b_{2,1}\,d_1^3}{2}\,F_{3,0}\,F_{1,1}
+	+\frac{h^5\,b_{3,j}\,d_j^2\,b_{j,k}\,d_k}{2}\,F_{3,1}\,F_{1,0}
+	+\frac{h^5\,b_{3,j}\,b_{j,k}\,d_k^3}{6}\,F_{3,0}\,F_{1,1}
+	+\frac{h^5\,b_{3,j}\,\PA{b_{j,k}\,d_k}^2}{2}\,F_{2,2}\,F_{1,0}^2
 \]
 \[
-	+\frac{h^5\,b_{3,2}\,\PA{b_{2,1}\,d_1}^2}{2}\,F_{2,2}\,F_{1,0}^2
-	+\frac{h^5\,b_{3,2}\,d_2\,b_{2,1}\,d_1^2}{2}\,F_{2,1}\,F_{2,0}
+	+\frac{h^5\,b_{3,j}\,d_j\,b_{j,k}\,d_k^2}{2}\,F_{2,1}\,F_{2,0}
+	+O\PA{h^6}
+\]
+\[
+	f_3=F_{0,0}+h\,d_3\,F_{1,0}+\frac{h^2\,d_3^2}{2}\,F_{2,0}
+	+h^2\,b_{3,j}\,d_j\,F_{1,1}\,F_{1,0}+\frac{h^3\,d_3^3}{6}\,F_{3,0}
+\]
+\[
+	+h^3\,d_3\,b_{3,j}\,d_j\,F_{2,1}\,F_{1,0}
+	+\frac{h^3\,b_{3,j}\,d_j^2}{2}\,F_{2,0}\,F_{1,1}
+	+h^3\,b_{3,j}\,b_{j,k}\,d_k\,F_{1,1}^2\,F_{1,0}
+	+\frac{h^4\,d_3^4}{24}\,F_{4,0}
+\]
+\[
+	+\frac{h^4\,d_3^2\,b_{3,j}\,d_j}{2}\,F_{3,1}\,F_{1,0}
+	+\frac{h^4\,b_{3,j}\,d_j^3}{6}\,F_{3,0}\,F_{1,1}
+	+\frac{h^4\,\PA{b_{3,j}\,d_j}^2}{2}\,F_{2,2}\,F_{1,0}^2
+\]
+\[
+	+\frac{h^4\,d_3\,b_{3,j}\,d_j^2}{2}\,F_{2,1}\,F_{2,0}
+	+h^4\,d_3\,b_{3,j}\,b_{j,k}\,d_k\,F_{2,1}\,F_{1,1}\,F_{1,0}
+	+\frac{h^4\,b_{3,j}\,b_{j,k}\,d_k^2}{2}\,F_{2,0}\,F_{1,1}^2
+\]
+\[+O\PA{h^5},\]
+\[
+	u_4=u_0+h\,d_4\,F_{0,0}+h^2\,b_{4,j}\,d_j\,F_{1,0}
+	+\frac{h^3\,b_{4,j}\,d_j^2}{2}\,F_{2,0}
+	+h^3\,b_{4,j}\,b_{j,k}\,d_k\,F_{1,1}\,F_{1,0}
+\]
+\[
+	+\frac{h^4\,b_{4,j}\,d_j^3}{6}\,F_{3,0}
+	+h^4\,b_{4,j}\,d_j\,b_{j,k}\,d_k\,F_{2,1}\,F_{1,0}
+	+\frac{h^4\,b_{4,j}\,b_{j,k}\,d_k^2}{2}\,F_{2,0}\,F_{1,1}
+\]
+\[
+	+h^4\,b_{4,j}\,b_{j,k}\,b_{k,l}\,d_l\,F_{1,1}^2\,F_{1,0}
+	+\frac{h^5\,b_{4,j}\,d_j^4}{24}\,F_{4,0}
+	+\frac{h^5\,b_{4,j}\,d_j^2\,b_{j,k}\,d_k}{2}\,F_{3,1}\,F_{1,0}
+\]
+\[
+	+\frac{h^5\,b_{4,j}\,b_{j,k}\,d_k^3}{6}\,F_{3,0}\,F_{1,1}
+	+\frac{h^5\,b_{4,j}\,\PA{b_{j,k}\,d_k}^2}{2}\,F_{2,2}\,F_{1,0}^2
+	+\frac{h^5\,b_{4,j}\,d_j\,b_{j,k}\,d_k^2}{2}\,F_{2,1}\,F_{2,0}
+\]
+\[
+	+h^5\,b_{4,j}\,d_j\,b_{j,k}\,b_{k,l}\,d_l\,F_{2,1}\,F_{1,1}\,F_{1,0}
+	+\frac{h^5\,b_{4,j}\,b_{j,k}\,b_{k,l}\,d_k^2}{2}\,F_{2,0}\,F_{1,1}^2
 	+O\PA{h^6}
 \]
 
@@ -149,23 +240,215 @@ Using the Einstein's notation, where repeated indeces are summed, and comparing
 with the Taylor's series (\ref{EqTaylor}) a $i$-steps Runge-Kutta method has to
 hold the following conditions to get different approximation orders:
 \begin{itemize}
-\item Fist order:
+\item First order:
 	\EQ{d_i=1.}{EqRKI}
 \item Second order:
 	\EQ{b_{i,j}\,d_j=\frac12.}{EqRKII}
 \item Third order:
-	\[b_{i,j}\,d_j^2=\frac13,\]
-	\EQ{b_{i,j}\,b_{j,k}\,d_k=\frac16.}{EqRKIII}
+	\EQ
+	{
+		b_{i,j}\,d_j^2=\frac13,\quad
+		b_{i,j}\,b_{j,k}\,d_k=\frac16.
+	}{EqRKIII}
 \item Fourth order:
-	\[b_{i,j}\,d_j^3=\frac14,\]
-	\EQ{b_{i,j}\,b_{j,k}\,d_k^2=\frac1{12}.}{EqRKIV}
+	\EQ
+	{
+		b_{i,j}\,d_j^3=\frac14,\quad
+		b_{i,j}\,d_j\,b_{j,k}\,d_k=\frac18,\quad
+		b_{i,j}\,b_{j,k}\,d_k^2=\frac1{12},\quad
+		b_{i,j}\,b_{j,k}\,b_{k,l}\,d_l=\frac1{24}.
+	}{EqRKIV}
+\item Fifth order:
+	\[
+		b_{i,j}\,d_j^4=\frac15,\quad
+		b_{i,j}\,d_j^2\,b_{j,k}\,d_k=\frac1{10},\quad
+		b_{i,j}\,b_{j,k}\,d_k^3=\frac1{20},
+	\]
+	\[
+		b_{i,j}\,\PA{b_{j,k}\,d_k}^2=\frac1{20},\quad
+		b_{i,j}\,d_j\,b_{j,k}\,d_k^2=\frac1{15},\quad
+		b_{i,j}\,d_j\,b_{j,k}\,b_{k,l}\,d_l=\frac7{120},
+	\]
+	\EQ
+	{
+		b_{i,j}\,b_{j,k}\,b_{k,l}\,d_l^2=\frac1{60},\quad
+		b_{i,j}\,b_{j,k}\,b_{k,l}\,b_{l,m}\,d_m=\frac1{120}.
+	}{EqRKV}
 \end{itemize}
 
-\subsection{Runge-Kutta pairs}
+On equations depending only in time, first of the above equations are
+sufficient:
+\begin{itemize}
+\item $n$-th order:
+	\EQ{b_{i,j}\,d_j^{n-1}=\frac1n.}{EqRKt}
+\end{itemize}
+
+\subsection{Strong stability}
+
+General Runge-Kutta methods (\ref{EqRK}) can also be expressed as:
+\EQ
+{
+	u_i=\sum_{j=0}^{i-1}a_{i,j}\,\PA{u_j+h\,c_{i,j}\,f_j},\quad
+	\sum_{j=0}^{i-1}a_{i,j}=1.
+}{EqRKac}
+The following relation is hold:
+\EQ{b_{i,j}=(a\,c)_{i,j}+\sum_{k=j+1}^{i-1}a_{i,k}\,b_{k,j}.}{EqRKacb}
+This form introduces new $i-1$ freedom degrees for each $i$-th step.
+
+A Runge-Kutta method preserves the TVD property if:
+\EQ{a_{i,j},\,c_{i,j}\geq0,\quad k_t\leq\frac1{\max\PA{c_{i,j}}}}{EqRKTVD}
+
+\subsection{Simple stability}
+
+On decay ODE a more simple stability condition can be obtained. In these
+equations, assuming positive $u$:
+\[
+	b_{i,j}\geq0\Rightarrow\;
+	u_i=u_0-h\,b_{i,j}\,\ABS{g_j}\,u_j\leq u_0\Rightarrow\;
+	f_i\leq f_0\Rightarrow
+\]
+\EQ
+{
+	u_i\geq u_0-h\,\sum_jb_{i,j}\,\ABS{g_0}\,u_0
+	=u_0\,\PA{1-h\,d_i\,\ABS{g_0}}
+}{EqRKSimpleCondition}
+wherefrom preserving sign in $u$ is ensured by:
+\EQ{b_{i,j}\geq0,\quad k_t\leq\frac{1}{\max\PA{d_i}}}{EqRKStable}
+
+\subsection{Ballistic ODE}
+
+For ballistic ODE, Runge-Kutta methods are adapted by doing:
+\EQ
+{
+	\vec{r}_i=\vec{r}_0+h\,b_{i,j}\,\dot{\vec{r}}_j,\quad
+	\dot{\vec{r}}_i=\dot{\vec{r}}_0+h\,b_{i,j}\,\ddot{\vec{r}}_j,\quad
+	\ddot{\vec{r}}_i=\ddot{\vec{r}}\PA{\dot{\vec{r}}_i}.
+}{EqRKBODE}
+
+\subsection{One step first order (Euler's method)}
+
+The one step first order method, proposed by Euler, is defined by the
+coefficient matrices of table~\ref{TableRKiI}.
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{c|c}
+		$d_{i}$ & $b_{i,j}$ \\ \hline
+		1 & 1
+	\end{tabular},~
+	\begin{tabular}{c}
+		$a_{i,j}$ \\ \hline
+		1
+	\end{tabular},~
+	\begin{tabular}{c}
+		$c_{i,j}$ \\ \hline
+		1
+	\end{tabular}
+	\caption{One step first order Runge-Kutta method coefficients.
+		\label{TableRKiI}}
+\end{table}
+This a first order method with strong and simple stability for $k_t\leq1$.
+
+\subsection{Two steps second order}
+
+We consider two interesting two steps second order methods defined by the
+coefficients matrices of tables~\ref{TableRKiiIIa} and~\ref{TableRKiiIIb}.
+First method is second order, third order in equations depending only in time,
+simple stable for $k_t\leq1$ and strong stable for $k_t\leq1/2$. Second method
+is second order and simple and strong stable for $k_t\leq1$.
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{c|cc}
+		$d_{i}$ & $b_{i,j}$ \\ \hline
+		2/3 & 2/3 \\
+		1 & 1/4 & 3/4
+	\end{tabular},~
+	\begin{tabular}{cc}
+		$a_{i,j}$ \\ \hline
+		1 \\
+		5/8 & 3/8
+	\end{tabular},~
+	\begin{tabular}{cc}
+		$c_{i,j}$ \\ \hline
+		2/3 \\
+		0 & 2
+	\end{tabular}
+	\caption{Coefficients of the rwo steps second order Runge-Kutta method optime
+		in accuracy.\label{TableRKiiIIa}}
+\end{table}
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{c|cc}
+		$d_{i}$ & $b_{i,j}$ \\ \hline
+		1 & 1 \\
+		1 & 1/2 & 1/2
+	\end{tabular},~
+	\begin{tabular}{cc}
+		$a_{i,j}$ \\ \hline
+		1 \\
+		1/2 & 1/2
+	\end{tabular},~
+	\begin{tabular}{cc}
+		$c_{i,j}$ \\ \hline
+		1 \\
+		0 & 1
+	\end{tabular}
+	\caption{Coefficients of the two steps second order Runge-Kutta method optime
+		in strong stability.\label{TableRKiiIIb}}
+\end{table}
+
+\subsection{Three steps third order}
+
+The most interesting three steps Runge-Kutta is the defined by the coefficients
+of the table~\ref{TableRKiiiIII}.
+This method is third order, fourth order in equations depending only in time and
+simple and strong stable for $k_t\leq1$.
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{c|ccc}
+		$d_{i}$ & $b_{i,j}$ \\ \hline
+		1 & 1 \\
+		1/2 & 1/4 & 1/4 \\
+		1 & 1/6 & 1/6 & 2/3
+	\end{tabular},~
+	\begin{tabular}{ccc}
+		$a_{i,j}$ \\ \hline
+		1 \\
+		3/4 & 1/4 \\
+		1/3 & 0 & 2/3
+	\end{tabular},~
+	\begin{tabular}{ccc}
+		$c_{i,j}$ \\ \hline
+		1 \\
+		0 & 1 \\
+		0 & 0 & 1
+	\end{tabular}
+	\caption{Coefficients of the three steps third order Runge-Kutta method.
+		\label{TableRKiiiIII}}
+\end{table}
+
+\subsection{Four steps fourth order}
+
+The only four steps fourth order simple stable for $k_t\leq1$ is the defined by
+the coefficients of the table~\ref{TableRKivIV}.
+They are not fourth order strong stable Runge-Kutta methods of four steps.
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{c|cccc}
+		$d_{i}$ & $b_{i,j}$ \\ \hline
+		1/2 & 1/2 \\
+		1/2 & 0 & 1/2 \\
+		1 & 0 & 0 & 1 \\
+		1 & 1/6 & 1/3 & 1/3 & 1/6
+	\end{tabular}
+	\caption{Coefficients of the four steps fourth order Runge-Kutta method.
+		\label{TableRKivIV}}
+\end{table}
+
+\section{Runge-Kutta pairs}
 
 \section{Multi-steps methods}
 
-\subsection{Multi-steps pairs}
+\section{Multi-steps pairs}
 
 \section{Tests}
 
