Enabling local languages and XML input files

--- a/ode.tex
+++ b/ode.tex
@@ -466,16 +466,16 @@ fourth order and fifth order in equations depending only on time.
 		$d_{i}$ & $b_{i,j}$ \\ \hline
 		$\frac{11}{40}$ & $\frac{11}{40}$ \\
 		1 & $\frac{223}{803}$ & $\frac{580}{803}$ \\
-		$\frac12$ & $\frac{141}{14600}$ & $\frac25$ & $\frac{1319}{14600}$ \\
-		$\frac{17}{20}$ & $\frac{66115057}{1927200000}$ & 
-			$\frac{112897731}{465740000}$ & $\frac{15650557}{5080800000}$
+		$\frac12$ & $\frac{1.41}{146}$ & $\frac25$ & $\frac{13.19}{146}$ \\
+		$\frac{17}{20}$ & $\frac{661.15057}{19272}$ & 
+			$\frac{11289.7731}{46574}$ & $\frac{156.50557}{50808}$
 			& $\frac{2737}{4800}$ \\
 		1 & $\frac{107}{1122}$ & $\frac{64000}{198099}$ & $\frac7{522}$ & 
 			$\frac{46}{189}$ & $\frac{8000}{24633}$
 	\end{tabular}
 	\caption{Coefficients of the five steps fourth order, fifth order in
-		equations depending only in time, Runge-Kutta pair (RK5-4(5)).
-		\label{TableRKIIIvIV}}
+		equations depending only in time, Runge-Kutta method (RK5-4(5)).
+		\label{TableRKvIV}}
 \end{table}
 
 \section{Runge-Kutta pairs}
